--- a/index.html
+++ b/index.html
@@ -19,39 +19,43 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="container_nav">
-                <div class="logo">
-                    <img src="./src/assets/images/logo 2.png" alt="">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Muro</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Objetos perdidos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Foro</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Log In</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="/src/assets/images/iconoPerfil.png" alt="profileIcon" width="40px">
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Perfil</a></li>
+                                <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-                <div class="link_menu">
-                    <ul>
-                        <li>
-                            <a href="#">Inicio</a>
-                        </li>
-                        <li>
-                            <a href="#">Muro</a>
-                        </li>
-                        <li>
-                            <a href="#">Objetos Perdidos</a>
-                        </li>
-                        <li>
-                            <a href="#">Foro</a>
-                        </li>
-                    </ul>
-                </div>    
-                <div class="user_link">
-                    <ul>
-                        <li>
-                            <a href="#">Log In</a>
-                        </li>
-                        <li>
-                            <a href="#"><img src="./src/assets/images/User.png" alt="user"></a>
-                        </li>
-                    </ul>
-                </div>    
             </div>
-            
         </nav>
     </header>
     <main>
@@ -114,44 +118,35 @@
     </main>
 
     <footer>
-        <div class="container_footer">
-            <div class="logo_footer">
-                <img src="./src/assets/images/logo R.png" alt="">
-                <p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p>
+        <div class="footer">
+            <div class="footerContain">
+                <div class="logo"> <img src="/src/assets/images/logor.webp" alt="logoFoter" width="120px"></div>
+                <div class="logoText"><p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p></div>
             </div>
-
-            <div class="contact">
-                <h2>Contacto</h2>
-                <div>
-                   <p>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</p> 
+            <div class="footerContain footermargin textAlignC">
+                <div class="contact"><h3>Contact</h3></div>
+                <div class="textContact">
+                    <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
+                    <div><img src="/src/assets/images/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
+                    <div><img src="/src/assets/images/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
                 </div>
-                
-                <div>
-                    <img src="./src/assets/images/phone 2.png" alt="phone">
-                    <p>Phone : +57 3017325327</p>
-                </div>
-
-                <div>
-                    <img src="./src/assets/images/mail 1.png" alt="mail">
-                    <p>E-mail : info@riwi.io</p>
-                </div>
-
             </div>
-
-            <div class="social_networks">
-                <h2>Redes sociales</h2>
-                <a href="#"><img src="./src/assets/images/facebook 1.png" alt="Facebook"></a>
-                <a href="#"><img src="./src/assets/images/instag 1.png" alt="Instagram"></a>
-                <a href="#"><img src="./src/assets/images/in 1.png" alt="Linkedin"></a>
+            <div class="footerContain footermargin socialResponsive textAling">
+                <div class="socialMedia"><h3>Social Networks</h3></div>
+                <div class="logoSocial">
+                    <img src="/src/assets/images/iconfb.png" alt="iconfb" width="50px">
+                    <img src="/src/assets/images/iconinsta.png" alt="iconig" width="50px">
+                    <img src="/src/assets/images/iconin.png" alt="iconin"  width="50px">
+                </div>
             </div>
         </div>
-
-
-
     </footer>
 
 
   
       <script src="index.js"></script>
+
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
