--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <meta name="googlebot" content="index,follow" />
     <meta name="revisit-after" content="15days" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/src/js/script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     <title>Riwall</title>
 </head>
@@ -60,7 +59,7 @@
     </header>
     <main>
         <div class="container_main">
-            
+            <button class="btnAdmin">Publicar informacion oficial</button>
             <div class="container_information">
                 <h2 class="tittle_bar">Informacion oficial</h2>
                 <div class="cardInfo_container">
