Corregir posicion de la nav bar a sticky

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
 
             <div class="container_wall">
-                    <a href="./src/components/wall/index.html"><h2 class="tittle_bar tittle_bar_link">Muro de publicaciones</h2></a>
+                    <a href="./src/components/wall/index.html" class="link_tittle_container"><h2 class="tittle_bar tittle_bar_link">Muro de publicaciones</h2></a>
                     <div class="cardWall_container">
                         <div class="popup" id="popup2">
                             <div class="popup-content" id="popup-content2">
@@ -147,16 +147,39 @@
                             <img src="./src/assets/images/userwall.png" alt="">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div> 
+                        <div class="cardWall btnOpenPopup2">
+                            <img src="./src/assets/images/userwall.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div> 
+                        <div class="cardWall btnOpenPopup2">
+                            <img src="./src/assets/images/userwall.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div> 
+                        <div class="cardWall btnOpenPopup2">
+                            <img src="./src/assets/images/userwall.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div> 
+                        <div class="cardWall btnOpenPopup2">
+                            <img src="./src/assets/images/userwall.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div> 
+                        <div class="cardWall btnOpenPopup2">
+                            <img src="./src/assets/images/userwall.png" alt="">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div> 
 
                     </div>
             </div>
 
             <div class="container_objectsLost">
-                    <a href="./src/components/objectLost/index.html"><h2 class="tittle_bar tittle_bar_link">Objectos Perdidos</h2></a>
+                    <a href="./src/components/objectLost/index.html" class="link_tittle_container"><h2 class="tittle_bar tittle_bar_link">Objectos Perdidos</h2></a>
                     <div class="cardObjects_container">
-                        <div class="cardObjects">
+                        <a href="/src/components/objectLost/index.html"class="cardObjects">
+                            <div >
     
-                        </div>
+                            </div>
+                        </a>
+                        
                     </div>
             </div>
 
