--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" aria-current="page" href="./src/components/objectLost/index.html">Objetos perdidos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Foro</a>
+                            <a class="nav-link" aria-current="page" href="./src/components/forum/index.html">Foro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./src/components/singIn/index.html">Log In</a>
@@ -60,7 +60,7 @@
     <main>
         <div class="container_main">
             <button type="button" id="buttonCard">Publicacion oficial</button>
-            
+
             <div class="container_information">
                 <h2 class="tittle_bar">Informacion oficial</h2>
                 <div class="cardInfo_container"> 
